--- a/pages/index.html
+++ b/pages/index.html
@@ -7,5 +7,11 @@
     <link rel="stylesheet" href="../styles/style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="page">
+      <header class="header">
+        <section class="header__main"></section>
+      </header>
+    </div>
+  </body>
 </html>
