--- a/pages/index.html
+++ b/pages/index.html
@@ -9,9 +9,11 @@
   </head>
   <body>
     <div class="page">
-      <header class="header">
-        <section class="header__main"></section>
-      </header>
+      <div class="page__block">
+        <header class="header">
+          <section class="header__main"></section>
+        </header>
+      </div>
     </div>
   </body>
 </html>
