add&aplly neccesery fonts commit

--- a/pages/index.html
+++ b/pages/index.html
@@ -11,7 +11,20 @@
     <div class="page">
       <div class="page__block">
         <header class="header">
-          <section class="header__main"></section>
+          <section class="header__main">
+            <div class="header__main-image"></div>
+            <div class="header__main-links">
+              <div class="main-links">Product</div>
+              <div class="main-links">Feature</div>
+              <div class="main-links">Pricing</div>
+              <div class="main-links">Support</div>
+            </div>
+            <div class="header__main-contacts">
+              <div class="main-contacts">+7 (999)-999-99-99</div>
+              <div class="main-contacts">test@mail.ru</div>
+            </div>
+            <div class="header__main-talking"></div>
+          </section>
         </header>
       </div>
     </div>
